Apply suggestions from code review
Co-authored-by: Bill Palombi <bill@prefect.io>

--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -37,12 +37,12 @@ if __name__ == "__main__":
 
 <CardGroup cols={3}>
   <Card title="Quickstart" icon="play" href="/3.0rc/get-started/quickstart">
-    Learn how to quickly schedule your code on remote infrastructure and observe the state of your workflows.
+    Learn how to quickly schedule your code to run on remote infrastructure and observe the state of your workflows.
   </Card>
-  <Card title="Prefect Cloud" icon="cloud">
-    Use our hosted workflow application framework that provides all the capabilities of Prefect server plus additional features.
+  <Card title="Prefect Cloud" icon="cloud" href="3.0rc/manage/cloud/index">
+    Use our hosted workflow application platform that provides all the capabilities of open source Prefect plus additional features.
   </Card>
-  <Card title="Upgrade to Prefect 3" icon="sparkles">
+  <Card title="Upgrade to Prefect 3" icon="sparkles" href="3.0rc/resources/upgrade-prefect-3.mdx">
     Learn how to migrate from Prefect 2 to Prefect 3 to get the latest features and performance enhancements.
   </Card>
 </CardGroup>
@@ -50,14 +50,14 @@ if __name__ == "__main__":
 ## Start building
 
 <CardGroup cols={3}>
-  <Card title="Develop" icon="code">
+  <Card title="Develop" icon="code" href="/3.0rc/develop/write-flows">
     Write and observe workflows, create tasks, and build interactive workflows.
   </Card>
-  <Card title="Deploy" icon="rocket">
-    Serve workflows, schedule work on serverless infrastructure, and bridge the Prefect orchestration environment with your execution environment.
+  <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/serve-flows/deploy-a-flow">
+    Serve workflows on long lived infrastructure or scale to zero by deploying workflows to dynamically provisioned infrastructure,.
   </Card>
-  <Card title="React" icon="eyes">
-    Learn how to react to your workflows with events, automations, and webhooks.
+  <Card title="React" icon="eyes" href="/3.0rc/automate/events/automations-triggers">
+    Enable workflows to react to their environment with events, automations, and webhooks.
   </Card>
 </CardGroup>
 
