--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -29,10 +29,10 @@ if __name__ == "__main__":
   <Card title="Quickstart" icon="play" href="/3.0rc/get-started/quickstart">
     Learn how to quickly schedule your code to run on remote infrastructure and observe the state of your workflows.
   </Card>
-  <Card title="Prefect Cloud" icon="cloud" href="3.0rc/manage/cloud/index">
+  <Card title="Prefect Cloud" icon="cloud" href="/3.0rc/manage/cloud/index">
     Use our hosted workflow application platform that provides all the capabilities of open source Prefect plus additional features.
   </Card>
-  <Card title="Upgrade to Prefect 3" icon="sparkles" href="3.0rc/resources/upgrade-prefect-3.mdx">
+  <Card title="Upgrade to Prefect 3" icon="sparkles" href="/3.0rc/resources/upgrade-prefect-3.mdx">
     Learn how to migrate from Prefect 2 to Prefect 3 to get the latest features and performance enhancements.
   </Card>
 </CardGroup>
