--- a/docs/3.0rc/develop/blocks.mdx
+++ b/docs/3.0rc/develop/blocks.mdx
@@ -43,16 +43,19 @@ You can create and use these block types through the UI without installing any a
 
 | Block                                                                                                                | Slug                                                     | Description                                                                                                                             |
 | -------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
-| Custom Webhook              | `custom-webhook`      | Calls custom webhooks.                                                |
-| Discord Webhook             | Calls Discord webhooks.                                                |                                  |
-| Mattermost Webhook          | `mattermost-webhook`    | Sends notifications through a provided Mattermost webhook. |
-| Microsoft Teams Webhook     | `ms-teams-webhook`       | Sends notifications through a provided Microsoft Teams webhook.                |
-| Opsgenie Webhook            | `opsgenie-webhook`       | Sends notifications through a provided Opsgenie webhook.                       |
-| Pager Duty Webhook          | `pager-duty-webhook`     | Sends notifications through a provided PagerDuty webhook.                      |
-| Secret                      | `secret`                 | Stores a secret value. The value will be obfuscated when this block is logged or shown in the UI. |
-| Sendgrid Email              | `sendgrid-email`         | Sends notifications through Sendgrid email.                                   |
-| Slack Webhook               | `slack-webhook`          | Sends notifications through a provided Slack webhook.                         |
-| Twilio SMS                  | `twilio-sms`             | Sends notifications through Twilio SMS.                                       |
+| Custom Webhook              | `custom-webhook`         | Call custom webhooks.                                                        |
+| Discord Webhook             | `discord-webhook`        | Call Discord webhooks.                                                       |
+| Local File System           | `local-file-system`       | Store data as a file on a local file system.                                   |
+| Mattermost Webhook          | `mattermost-webhook`     | Send notifications through a provided Mattermost webhook.                     |
+| Microsoft Teams Webhook     | `ms-teams-webhook`       | Send notifications through a provided Microsoft Teams webhook.                |
+| Opsgenie Webhook            | `opsgenie-webhook`       | Send notifications through a provided Opsgenie webhook.                       |
+| Pager Duty Webhook          | `pager-duty-webhook`     | Send notifications through a provided PagerDuty webhook.                      |
+| Remote File System          | `remote-file-system`      | Access files on a remote file system.                                          |
+| Secret                      | `secret`                 | Store a secret value. The value will be obfuscated when this block is logged or shown in the UI. |
+| Sendgrid Email              | `sendgrid-email`         | Send notifications through Sendgrid email.                                   |
+| Slack Webhook               | `slack-webhook`          | Send notifications through a provided Slack webhook.                         |
+| SMB                         | `smb`                    | Store data as a file on a SMB share.                                         |
+| Twilio SMS                  | `twilio-sms`             | Send notifications through Twilio SMS.                                       |
 
 
 <Warning>
@@ -90,6 +93,7 @@ If a block type is not available in the UI, you can [register it](#register-bloc
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI Postgres Target Configs     | `dbt-cli-postgres-target-configs`      |
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI Snowflake Target Configs   | `dbt-cli-snowflake-target-configs`     |
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI Target Configs        | `dbt-cli-target-configs`               |
+| [prefect-docker](/integrations/prefect-docker/)           | Docker Container                    | `docker-container`                    |
 | [prefect-docker](/integrations/prefect-docker/)           | Docker Host                         | `docker-host`                          |
 | [prefect-docker](/integrations/prefect-docker/)           | Docker Registry Credentials          | `docker-registry-credentials`          |
 | [prefect-email](/integrations/prefect-email/)             | Email Server Credentials        | `email-server-credentials`             |
@@ -103,7 +107,9 @@ If a block type is not available in the UI, you can [register it](#register-bloc
 | [prefect-github](/integrations/prefect-github/)           | GitHub Repository          | `github-repository`                    |
 | [prefect-gitlab](/integrations/prefect-gitlab/)           | GitLab Credentials         | `gitlab-credentials`                   |
 | [prefect-gitlab](/integrations/prefect-gitlab/)           | GitLab Repository           | `gitlab-repository`                    |
+| [prefect-kubernetes](/integrations/prefect-kubernetes/)   | Kubernetes Cluster Config        | `kubernetes-cluster-config`               |
 | [prefect-kubernetes](/integrations/prefect-kubernetes/)   | Kubernetes Credentials        | `kubernetes-credentials`               |
+| [prefect-kubernetes](/integrations/prefect-kubernetes/)   | Kubernetes Job        | `kubernetes-job`               |
 | [prefect-shell](/integrations/prefect-shell/)             | Shell Operation                 | `shell-operation`|
 | [prefect-slack](/integrations/prefect-slack/)             | Slack Credentials   | `slack-credentials`                    |
 | [prefect-slack](/integrations/prefect-slack/)             | Slack Incoming Webhook   | `slack-incoming-webhook`               |
