--- a/docs/3.0rc/develop/blocks.mdx
+++ b/docs/3.0rc/develop/blocks.mdx
@@ -39,21 +39,23 @@ For configuration that will change between flow runs, we recommend using [parame
 ## Prefect built-in blocks
 
 Commonly used block types come built-in with Prefect. 
-You can create and use these block types through the UI and without installing any additional packages.
+You can create and use these block types through the UI without installing any additional packages.
 
 | Block                                                                                                                | Slug                                                     | Description                                                                                                                             |
 | -------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
-| Custom Webhook                 | `custom-webhook`                                                | Calls custom webhooks.                                                |
-| Discord Webhook                                                | Calls Discord webhooks.                                                |                                  |
-| Kubernetes Cluster Config   | <span class="no-wrap">`kubernetes-cluster-config`</span> | Stores configuration for interaction with Kubernetes clusters.                                 |
-| Mattermost Webhook                               | `mattermost-webhook`                                                | Sends notifications through a provided Mattermost webhook. |
-| Microsoft Teams Webhook | `ms-teams-webhook`                                       | Sends notifications through a provided Microsoft Teams webhook.                           |
-| Opsgenie Webhook            | `opsgenie-webhook`                                       | Sends notifications through a provided Opsgenie webhook.                             |
-| Pager Duty Webhook          | `pager-duty-webhook`                                     | Sends notifications through a provided PagerDuty webhook.                                  |
-| Secret                                               | `secret`                                           | Stores a secret value. The value will be obfuscated when this block is logged or shown in the UI. |
-| Sendgrid Email                 | `sendgrid-email`                                         | Sends notifications through Sendgrid email.                                         |
-| Slack Webhook                  | `slack-webhook`                                          | Sends notifications through a provided Slack webhook.                      |                                                   |
-| Twilio SMS                        | `twilio-sms`                                             | Sends notifications through Twilio SMS.                                                       |
+| Custom Webhook              | `custom-webhook`         | Call custom webhooks.                                                        |
+| Discord Webhook             | `discord-webhook`        | Call Discord webhooks.                                                       |
+| Local File System           | `local-file-system`       | Store data as a file on a local file system.                                   |
+| Mattermost Webhook          | `mattermost-webhook`     | Send notifications through a provided Mattermost webhook.                     |
+| Microsoft Teams Webhook     | `ms-teams-webhook`       | Send notifications through a provided Microsoft Teams webhook.                |
+| Opsgenie Webhook            | `opsgenie-webhook`       | Send notifications through a provided Opsgenie webhook.                       |
+| Pager Duty Webhook          | `pager-duty-webhook`     | Send notifications through a provided PagerDuty webhook.                      |
+| Remote File System          | `remote-file-system`      | Access files on a remote file system.                                          |
+| Secret                      | `secret`                 | Store a secret value. The value will be obfuscated when this block is logged or shown in the UI. |
+| Sendgrid Email              | `sendgrid-email`         | Send notifications through Sendgrid email.                                   |
+| Slack Webhook               | `slack-webhook`          | Send notifications through a provided Slack webhook.                         |
+| SMB                         | `smb`                    | Store data as a file on a SMB share.                                         |
+| Twilio SMS                  | `twilio-sms`             | Send notifications through Twilio SMS.                                       |
 
 
 <Warning>
@@ -68,7 +70,6 @@ The JSON, DateTime, and String blocks are deprecated in favor of [Variables](/3.
 Some block types that appear in the UI can be created immediately, with the corresponding integration library installed for use.
 For example, an AWS Secret block can be created, but not used until the [`prefect-aws` library](/integrations/prefect-aws/) is installed.
 
-Anyone can create block types and optionally share them with the community.
 Find available block types in many of the published [Prefect integrations libraries](/integrations/).
 If a block type is not available in the UI, you can [register it](#register-blocks) through the CLI.
 
@@ -76,14 +77,14 @@ If a block type is not available in the UI, you can [register it](#register-bloc
 | ----------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------- |
 | [prefect-aws](/integrations/prefect-aws/)                 | ECS Task                            | `ecs-task`                             |
 | [prefect-aws](/integrations/prefect-aws/)                 | MinIO Credentials            | `minio-credentials`                    |
-| [prefect-aws](/integrations/prefect-aws/)                 | S3 Bucket                                    | `s3-bucket`                            |
+| [prefect-aws](/integrations/prefect-aws/)                 | S3 Bucket                       | `s3-bucket`                            |
 | [prefect-azure](/integrations/prefect-azure/)             | Azure Blob Storage Credentials           | `azure-blob-storage-credentials`       |
 | [prefect-azure](/integrations/prefect-azure/)             | Azure Container Instance Credentials | `azure-container-instance-credentials` |
 | [prefect-azure](/integrations/prefect-azure/)             | Azure Container Instance Job]   | `azure-container-instance-job`         |
 | [prefect-azure](/integrations/prefect-azure/)             | Azure Cosmos DB Credentials      | `azure-cosmos-db-credentials`          |
 | [prefect-azure](/integrations/prefect-azure/)             | AzureML Credentials    | `azureml-credentials`                  |
 | [prefect-bitbucket](/integrations/prefect-bitbucket/)     | BitBucket Credentials         | `bitbucket-credentials`                |
-| [prefect-bitbucket](/integrations/prefect-bitbucket/)     | BitBucket Repository                               | `bitbucket-repository`                 |
+| [prefect-bitbucket](/integrations/prefect-bitbucket/)     | BitBucket Repository               | `bitbucket-repository`                 |
 | [prefect-databricks](/integrations/prefect-databricks/)   | Databricks Credentials             | `databricks-credentials`               |
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI BigQuery Target Configs      |`dbt-cli-bigquery-target-configs`      |
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI Profile         | `dbt-cli-profile`                      |
@@ -92,27 +93,32 @@ If a block type is not available in the UI, you can [register it](#register-bloc
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI Postgres Target Configs     | `dbt-cli-postgres-target-configs`      |
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI Snowflake Target Configs   | `dbt-cli-snowflake-target-configs`     |
 | [prefect-dbt](/integrations/prefect-dbt/)                 | dbt CLI Target Configs        | `dbt-cli-target-configs`               |
-| [prefect-docker](/integrations/prefect-docker/)           |Docker Host                         | `docker-host`                          |
-| [prefect-docker](/integrations/prefect-docker/)           |Docker Registry Credentials          | `docker-registry-credentials`          |
-| [prefect-email](/integrations/prefect-email/)             |Email Server Credentials        | `email-server-credentials`             |
-| [prefect-gcp](/integrations/prefect-gcp/)                 |BigQuery Warehouse     | `bigquery-warehouse`                   |
-| [prefect-gcp](/integrations/prefect-gcp/)                 |GCP Cloud Run Job              | `cloud-run-job`                        |
-| [prefect-gcp](/integrations/prefect-gcp/)                 |GCP Credentials          | `gcp-credentials`                      |
-| [prefect-gcp](/integrations/prefect-gcp/)                 |GcpSecret         | `gcpsecret`                            |
-| [prefect-gcp](/integrations/prefect-gcp/)                 |GCS Bucket      | `gcs-bucket`                           |
-| [prefect-gcp](/integrations/prefect-gcp/)                 |Vertex AI Custom Training Job   | `vertex-ai-custom-training-job`        |
-| [prefect-github](/integrations/prefect-github/)           |GitHub Credentials                    | `github-credentials`                   |
-| [prefect-github](/integrations/prefect-github/)           |GitHub Repository          | `github-repository`                    |
-| [prefect-gitlab](/integrations/prefect-gitlab/)           |GitLab Credentials         | `gitlab-credentials`                   |
-| [prefect-gitlab](/integrations/prefect-gitlab/)           |GitLab Repository           | `gitlab-repository`                    |
-| [prefect-kubernetes](/integrations/prefect-kubernetes/)   |Kubernetes Credentials        | `kubernetes-credentials`               |
-| [prefect-shell](/integrations/prefect-shell/)             |Shell Operation                 | `shell-operation`|
-| [prefect-slack](/integrations/prefect-slack/)             |Slack Credentials   | `slack-credentials`                    |
-| [prefect-slack](/integrations/prefect-slack/)             |Slack Incoming Webhook   | `slack-incoming-webhook`               |
-| [prefect-snowflake](/integrations/prefect-snowflake/)       |Snowflake Connector    | `snowflake-connector`                  |
-| [prefect-snowflake](/integrations/prefect-snowflake/)       |Snowflake Credentials      | `snowflake-credentials`                |
-| [prefect-sqlalchemy](/integrations/prefect-sqlalchemy/)   |Database Credentials      | `database-credentials`                 |
-| [prefect-sqlalchemy](/integrations/prefect-sqlalchemy/)   |SQLAlchemy Connector              | `sqlalchemy-connector`                 |
+| [prefect-docker](/integrations/prefect-docker/)           | Docker Container                    | `docker-container`                    |
+| [prefect-docker](/integrations/prefect-docker/)           | Docker Host                         | `docker-host`                          |
+| [prefect-docker](/integrations/prefect-docker/)           | Docker Registry Credentials          | `docker-registry-credentials`          |
+| [prefect-email](/integrations/prefect-email/)             | Email Server Credentials        | `email-server-credentials`             |
+| [prefect-gcp](/integrations/prefect-gcp/)                 | BigQuery Warehouse     | `bigquery-warehouse`                   |
+| [prefect-gcp](/integrations/prefect-gcp/)                 | GCP Cloud Run Job              | `cloud-run-job`                        |
+| [prefect-gcp](/integrations/prefect-gcp/)                 | GCP Credentials          | `gcp-credentials`                      |
+| [prefect-gcp](/integrations/prefect-gcp/)                 | GcpSecret         | `gcpsecret`                            |
+| [prefect-gcp](/integrations/prefect-gcp/)                 | GCS Bucket      | `gcs-bucket`                           |
+| [prefect-gcp](/integrations/prefect-gcp/)                 | Vertex AI Custom Training Job   | `vertex-ai-custom-training-job`        |
+| [prefect-github](/integrations/prefect-github/)           | GitHub Credentials                    | `github-credentials`                   |
+| [prefect-github](/integrations/prefect-github/)           | GitHub Repository          | `github-repository`                    |
+| [prefect-gitlab](/integrations/prefect-gitlab/)           | GitLab Credentials         | `gitlab-credentials`                   |
+| [prefect-gitlab](/integrations/prefect-gitlab/)           | GitLab Repository           | `gitlab-repository`                    |
+| [prefect-kubernetes](/integrations/prefect-kubernetes/)   | Kubernetes Cluster Config        | `kubernetes-cluster-config`               |
+| [prefect-kubernetes](/integrations/prefect-kubernetes/)   | Kubernetes Credentials        | `kubernetes-credentials`               |
+| [prefect-kubernetes](/integrations/prefect-kubernetes/)   | Kubernetes Job        | `kubernetes-job`               |
+| [prefect-shell](/integrations/prefect-shell/)             | Shell Operation                 | `shell-operation`|
+| [prefect-slack](/integrations/prefect-slack/)             | Slack Credentials   | `slack-credentials`                    |
+| [prefect-slack](/integrations/prefect-slack/)             | Slack Incoming Webhook   | `slack-incoming-webhook`               |
+| [prefect-snowflake](/integrations/prefect-snowflake/)       | Snowflake Connector    | `snowflake-connector`                  |
+| [prefect-snowflake](/integrations/prefect-snowflake/)       | Snowflake Credentials      | `snowflake-credentials`                |
+| [prefect-sqlalchemy](/integrations/prefect-sqlalchemy/)   | Database Credentials      | `database-credentials`                 |
+| [prefect-sqlalchemy](/integrations/prefect-sqlalchemy/)   | SQLAlchemy Connector              | `sqlalchemy-connector`                 |
+
+Anyone can create a custom block type and, optionally, share it with the community.
 
 ## Use existing block types
 
