--- a/docs/contribute/code-of-conduct.mdx
+++ b/docs/contribute/code-of-conduct.mdx
@@ -1,6 +1,6 @@
 ---
 title: Code of Conduct
-description: Learn how about the standards we hold ourselves and our community to.
+description: Learn about the standards we hold ourselves and our community to.
 ---
 
 ## Our Pledge
