--- a/docs/3.0rc/develop/task-caching.mdx
+++ b/docs/3.0rc/develop/task-caching.mdx
@@ -126,7 +126,7 @@ def my_cached_task(x: int):
 
 This task will rerun anytime you provide new values for `x`, _or_ anytime you change the underlying code.
 
-The `INPUTS` policy is a special policy that allows you to _subtract_ string values to signal ignoring
+The `INPUTS` policy is a special policy that allows you to _subtract_ string values to ignore
 certain task inputs:
 
 ```python
