--- a/docs/3.0rc/develop/task-caching.mdx
+++ b/docs/3.0rc/develop/task-caching.mdx
@@ -210,7 +210,7 @@ the `process_data` task succeeds as well.
 
 This ensures that anytime you need to rerun this flow both `load_data` and `process_data` are executed
 together. 
-And after a successful execution both will be indefinitely cached until the cache key is updated.
+After a successful execution both tasks will be cached until the cache key is updated.
 For more information on transactions, see [here](/3.0rc/develop/transactions). 
 
 ## Caching example
