--- a/docs/3.0rc/develop/task-caching.mdx
+++ b/docs/3.0rc/develop/task-caching.mdx
@@ -94,7 +94,7 @@ my_stateful_task() # sleeps again
 
 ## Customizing the cache
 
-Prefect allows users to configure task caching behavior in numerous ways.
+Prefect allows you to configure task caching behavior in numerous ways.
 
 ### Cache expiration
 
