--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -50,3 +50,7 @@ if __name__ == "__main__":
     Enable workflows to react to their environment with events, automations, and webhooks.
   </Card>
 </CardGroup>
+
+## Join our community
+
+Join Prefect's vibrant community of nearly [30,000 engineers](/contribute/index/) to learn with others and share your knowledge!
