--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome to Prefect
-description: Prefect is a workflow orchestration framework that empowers developers to build, observe, and react to data pipelines.
+description: Prefect is a workflow orchestration framework that empowers engineers to build, observe, and react to data pipelines.
 mode: wide
 ---
 
@@ -53,4 +53,4 @@ if __name__ == "__main__":
 
 ## Join our community
 
-Join Prefect's vibrant community of nearly [30,000 engineers](/contribute/index/) to learn with others and share your knowledge!
+Join Prefect's vibrant [community of nearly 30,000 engineers](/contribute/index/) to learn with others and share your knowledge!
