--- a/docs/3.0rc/manage/interact-with-api.mdx
+++ b/docs/3.0rc/manage/interact-with-api.mdx
@@ -1,5 +1,5 @@
 ---
-title: Manipulate run metadata in Python
+title: Manage run metadata in Python
 description: Learn how to use the `PrefectClient` to interact with the API.
 ---
 
