--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -8,11 +8,9 @@ This guide covers changes that you may need to make to ensure your Prefect 2 wor
 
 ## Module locations and names
 
-Some modules have been renamed, reorganized, or removed for clarity. Objects imported from changed modules will continue to work until their six month deprecation period ends, but will raise deprecation warnings. Here are the corresponding modules in Prefect 3:
-
-| Prefect 2 | Prefect 3 | Notes                                 |
-| --------- | --------- | ------------------------------------- |
-|           |           |                                       |
+Some modules have been renamed, reorganized, or removed for clarity. 
+Objects imported from changed modules will continue to work until their six month deprecation period ends, but will raise deprecation warnings. 
+See the [migartion script](https://github.com/PrefectHQ/prefect/blob/f767724ab28278446456b024b5c1c73f76ebcbb5/src/prefect/_internal/compatibility/migration.py#L22) for the full list of modules that have been moved and removed.
 
 ## Asynchronous task execution behavior
 
@@ -73,9 +71,8 @@ Because `Task.submit` is always a synchronous call, it does not need to be await
 `Task.submit` is still non-blocking and execution of the submitted task is also still non-blocking. 
 So, *you do not need to await use the `await` keyword in front of your `.submit` call*:
 
-<CardGroup cols={2}>
-  <Card title="Prefect 2">
-    ```python
+<CodeGroup>
+    ```python Prefect 2
     @task
     async def my_task():
 	...
@@ -87,9 +84,8 @@ So, *you do not need to await use the `await` keyword in front of your `.submit`
 	future = await my_task.submit()
 	return future
     ```
-  </Card>
-  <Card title="Prefect 3">
-    ```python
+
+    ```python Prefect 3
     @task
     async def my_task():
 	...
@@ -101,8 +97,7 @@ So, *you do not need to await use the `await` keyword in front of your `.submit`
 	future = my_task.submit()
 	return future
     ```
-  </Card>
-</CardGroup>
+</CodeGroup>
 
 The `PrefectFuture` methods are also always synchronous in Prefect 3. Names and return values have changed to reflect this:
 
@@ -111,9 +106,8 @@ The `PrefectFuture` methods are also always synchronous in Prefect 3. Names and 
 
 *Wait for the future to complete, then retrieve the state separately*:
 
-<CardGroup cols={2}>
-  <Card title="Prefect 2">
-    ```python
+<CodeGroup>
+    ```python Prefect 2
     @task
     async def my_task():
     	...
@@ -126,9 +120,8 @@ The `PrefectFuture` methods are also always synchronous in Prefect 3. Names and 
 	state = await future.wait()
 	return state
     ```
-  </Card>
-  <Card title="Prefect 3">
-    ```python
+
+    ```python Prefect 3
     @task
     async def my_task():
     	    ...
@@ -143,16 +136,14 @@ The `PrefectFuture` methods are also always synchronous in Prefect 3. Names and 
 	state = future.state
 	return state
     ```
-  </Card>
-</CardGroup>
+</CodeGroup>
 
 If you do not first wait for the future to complete, the run may raise an 'AttributeError: coroutine object has no attribute get' exception. 
 
 In Prefect 3, `PrefectFutures` resulting from submitted task runs are not automatically awaited/resolved before exiting a flow, unless they’re a dependency of other flows or tasks, so *you must wait for a task’s `PrefectFuture` resolution before the end of a flow*:
 
-<CardGroup cols={2}>
-  <Card title="Prefect 2">
-    ```python
+<CodeGroup>
+    ```python Prefect 2
     @task
     def my_task():
 	...
@@ -164,9 +155,8 @@ In Prefect 3, `PrefectFutures` resulting from submitted task runs are not automa
 	# these futures are resolved
 	futures = my_task.map([1, 2, 3, 4])
     ```
-  </Card>
-  <Card title="Prefect 3">
-    ```python
+
+    ```python Prefect 3
     @task
     def my_task():
 	...
@@ -178,8 +168,7 @@ In Prefect 3, `PrefectFutures` resulting from submitted task runs are not automa
 	# You must wait for futures before exiting flow.
 	futures.wait()
     ```
-  </Card>
-</CardGroup>
+</CodeGroup>
 
 If you do not wait for the futures, the tasks may fail with a 'Flow must be running to start a task' error. 
 The one exception to this case is that `PrefectFuture`s returned from a flow will resolve to states before completing the flow.
