--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -6,6 +6,12 @@ description: Learn how to upgrade from Prefect 2 to Prefect 3.
 Some patterns supported by Prefect 2 are no longer supported with Prefect 3, or are enabled differently. 
 This guide covers changes that you may need to make to ensure your Prefect 2 workflows keep flowing.
 
+<Info>
+Prefect 3 is an upgrade to the open source `prefect` Python package
+The Prefect 3 release does not involve any changes to Prefect Cloud.
+All previous and future Prefect 2 releases will continue to work with Prefect Cloud.
+</Info>
+
 ## Module locations and names
 
 Some modules have been renamed, reorganized, or removed for clarity. 
