overview-page-formatting

--- a/docs/integrations/integrations.mdx
+++ b/docs/integrations/integrations.mdx
@@ -1,5 +1,6 @@
 ---
 Title: Integrations
+sidebarTitle: Overview
 description: Prefect integrations are PyPI packages you can install to help you build integrate your workflows with third parties.
 mode: "wide"
 ---
