--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -72,7 +72,7 @@ Here are some examples:
 
 Because `Task.submit` is always a synchronous call, it does not need to be awaited. 
 `Task.submit` is still non-blocking and execution of the submitted task is also still non-blocking. 
-So, *you do not need to await use the `await` keyword in front of your `.submit` call*:
+So, *you do not need to use the `await` keyword in front of your `.submit` call*:
 
 <CodeGroup>
     ```python Prefect 2
