--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -3,7 +3,9 @@ title: Upgrade to Prefect 3
 description: Learn how to upgrade from Prefect 2 to Prefect 3.
 ---
 
-Some patterns supported by Prefect 2 are no longer supported with Prefect 3, or are enabled differently. 
+Prefect 3 is the most flexible, powerful, fastest version of Prefect yet.
+It offers [more ways than ever to model your workflows](https://github.com/PrefectHQ/prefect/releases/tag/3.0.0rc1).
+This means that some patterns supported by Prefect 2 are no longer supported with Prefect 3, or are enabled differently.
 This guide covers changes that you may need to make to ensure your Prefect 2 workflows keep flowing.
 
 <Info>
