Give the static/dynamic intro pages better titles

--- a/docs/3.0rc/deploy/dynamic-infra/index.mdx
+++ b/docs/3.0rc/deploy/dynamic-infra/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy flows
+title: Intro to dynamic deployments
 description: Learn how to configure flows for scheduled and remote execution.
 tags:
     - orchestration
