--- a/docs/3.0rc/deploy/static-infra/index.mdx
+++ b/docs/3.0rc/deploy/static-infra/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Serve flows
+title: Intro to static deployments
 description: Create a deployment for a flow by calling the `serve` method.
 ---
 
