--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -225,7 +225,7 @@ If you are using agents, see [this guide to upgrade from agents to workers](http
 ## Variables have replaced certain blocks
 
 In Prefect 2, variables are strings. 
-To store and retrive typed values in Prefect 2, you have to use certain single-value blocks, icluding JSON, Date Time, and String blocks.
+To store and retrieve typed values in Prefect 2, you have to use certain single-value blocks, including JSON, Date Time, and String blocks.
 In Prefect 3, variables can be any JSON compatible type, such that varaibles can now store all of these data types and more.
 Any single-value blocks created in Prefect 2 will still be accessible as such in Prefect 3, but you cannot create new single-value blocks.
 See the [set and get variables](/3.0rc/develop/variables) page for more information.
