--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -32,7 +32,7 @@ In Prefect 3, all workflow code, including task functions, runs on the main thre
 - Non-thread safe objects, such as database connections, can be shared globally within a workflow.
 
 To execute tasks asynchronously, you must either write asynchronous Python functions or use the `Task.submit` method to submit to a Prefect task runner.
-Prefect 3 encourages conventional asynchronous Python programing principles. 
+Prefect 3 encourages conventional asynchronous Python programming principles. 
 Updating your workflows to bring them in line with these principles requires code changes. 
 Here are some examples:
 
